tests/miniJava/pos/001241_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( false ) while ( 0 ) { } } }
