tests/miniJava/neg/006217_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while , ( 0 ) { } } }
